services/aggregator-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aggregator-service
  namespace: super-fortnight
  labels:
    app: aggregator-service
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: aggregator-service
